// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`changeCaseKeys snapshot test: dark theme > camelcaseKeys snapshot test 1`] = `
{
  "borderWidth": {
    "focus": {
      "1": "1px",
      "2": "2px",
    },
    "l": "2px",
    "m": "1px",
  },
  "color": {
    "background": {
      "default": "rgba(31, 31, 31, 1)",
      "overlay": "rgba(0, 0, 0, 0.32)",
      "secondary": "rgba(21, 21, 21, 1)",
      "tertiary": "rgba(6, 6, 6, 1)",
    },
    "border": {
      "default": "rgba(255, 255, 255, 0.36)",
      "defaultText3": "rgba(255, 255, 255, 0.36)",
      "disable": "rgba(255, 255, 255, 0.045)",
      "focus": {
        "1": "rgba(114, 181, 245, 1)",
        "2": "rgba(39, 84, 126, 1)",
        "legacy": "rgba(0, 150, 250, 0.32)",
      },
      "hover": "rgba(255, 255, 255, 0.44)",
      "hoverText3": "rgba(255, 255, 255, 0.44)",
      "hud": "rgba(31, 31, 31, 1)",
      "negative": "rgba(136, 54, 46, 1)",
      "press": "rgba(255, 255, 255, 0.535)",
      "pressText3": "rgba(255, 255, 255, 0.535)",
      "secondary": "rgba(255, 255, 255, 0.09)",
      "selected": "rgba(8, 114, 190, 1)",
    },
    "container": {
      "default": "rgba(31, 31, 31, 1)",
      "defaultA": "rgba(255, 255, 255, 0)",
      "disable": "rgba(51, 51, 51, 1)",
      "discovery": {
        "default": "rgba(197, 60, 51, 1)",
        "hover": "rgba(217, 88, 76, 1)",
        "press": "rgba(233, 114, 102, 1)",
      },
      "hover": "rgba(41, 41, 41, 1)",
      "hoverA": "rgba(255, 255, 255, 0.045)",
      "hud": {
        "default": "rgba(228, 228, 228, 1)",
        "hover": "rgba(202, 202, 202, 1)",
        "press": "rgba(188, 188, 188, 1)",
      },
      "negative": {
        "default": "rgba(197, 60, 51, 1)",
        "hover": "rgba(217, 88, 76, 1)",
        "press": "rgba(233, 114, 102, 1)",
      },
      "neutral": {
        "default": "rgba(112, 112, 112, 1)",
        "hover": "rgba(130, 130, 130, 1)",
        "press": "rgba(151, 151, 151, 1)",
      },
      "notice": {
        "default": "rgba(235, 178, 19, 1)",
        "hover": "rgba(238, 195, 92, 1)",
        "press": "rgba(252, 225, 167, 1)",
      },
      "onImg": {
        "default": "rgba(0, 0, 0, 0.325)",
        "hover": "rgba(0, 0, 0, 0.42)",
        "press": "rgba(0, 0, 0, 0.555)",
      },
      "positive": {
        "default": "rgba(13, 129, 5, 1)",
        "hover": "rgba(58, 150, 52, 1)",
        "press": "rgba(86, 169, 79, 1)",
      },
      "press": "rgba(51, 51, 51, 1)",
      "pressA": "rgba(255, 255, 255, 0.09)",
      "primary": {
        "default": "rgba(8, 114, 190, 1)",
        "hover": "rgba(55, 136, 208, 1)",
        "press": "rgba(83, 156, 224, 1)",
      },
      "secondary": {
        "default": "rgba(41, 41, 41, 1)",
        "defaultA": "rgba(255, 255, 255, 0.045)",
        "hover": "rgba(51, 51, 51, 1)",
        "hoverA": "rgba(255, 255, 255, 0.09)",
        "press": "rgba(81, 81, 81, 1)",
        "pressA": "rgba(255, 255, 255, 0.225)",
      },
      "skeleton": "rgba(255, 255, 255, 0.045)",
      "subtle": "rgba(228, 228, 228, 0.02)",
      "tertiary": {
        "default": "rgba(51, 51, 51, 1)",
        "defaultA": "rgba(255, 255, 255, 0.09)",
        "hover": "rgba(81, 81, 81, 1)",
        "hoverA": "rgba(255, 255, 255, 0.225)",
        "press": "rgba(112, 112, 112, 1)",
        "pressA": "rgba(255, 255, 255, 0.36)",
      },
    },
    "icon": {
      "default": "rgba(228, 228, 228, 1)",
      "disable": "rgba(130, 130, 130, 1)",
      "hover": "rgba(202, 202, 202, 1)",
      "negative": {
        "default": "rgba(252, 147, 134, 1)",
        "hover": "rgba(249, 186, 177, 1)",
        "press": "rgba(254, 219, 214, 1)",
      },
      "notice": {
        "default": "rgba(222, 167, 29, 1)",
        "hover": "rgba(238, 195, 92, 1)",
        "press": "rgba(252, 225, 167, 1)",
      },
      "onNegative": {
        "default": "rgba(228, 228, 228, 1)",
        "hover": "rgba(228, 228, 228, 1)",
        "press": "rgba(228, 228, 228, 1)",
      },
      "onNeutral": {
        "default": "rgba(228, 228, 228, 1)",
        "hover": "rgba(228, 228, 228, 1)",
        "press": "rgba(228, 228, 228, 1)",
      },
      "onNotice": {
        "default": "rgba(41, 41, 41, 1)",
        "hover": "rgba(41, 41, 41, 1)",
        "press": "rgba(41, 41, 41, 1)",
      },
      "onOnImg": {
        "default": "rgba(228, 228, 228, 1)",
        "hover": "rgba(228, 228, 228, 1)",
        "press": "rgba(228, 228, 228, 1)",
      },
      "onPositive": {
        "default": "rgba(228, 228, 228, 1)",
        "hover": "rgba(228, 228, 228, 1)",
        "press": "rgba(228, 228, 228, 1)",
      },
      "onPrimary": {
        "default": "rgba(228, 228, 228, 1)",
        "hover": "rgba(228, 228, 228, 1)",
        "press": "rgba(228, 228, 228, 1)",
      },
      "positive": {
        "default": "rgba(120, 194, 113, 1)",
        "hover": "rgba(161, 215, 155, 1)",
        "press": "rgba(191, 241, 186, 1)",
      },
      "press": "rgba(188, 188, 188, 1)",
      "secondary": {
        "default": "rgba(175, 175, 175, 1)",
        "hover": "rgba(188, 188, 188, 1)",
        "press": "rgba(202, 202, 202, 1)",
      },
      "tertiary": {
        "default": "rgba(130, 130, 130, 1)",
        "hover": "rgba(175, 175, 175, 1)",
        "press": "rgba(188, 188, 188, 1)",
      },
    },
    "text": {
      "default": "rgba(228, 228, 228, 1)",
      "defaultText1": "rgba(228, 228, 228, 1)",
      "disable": "rgba(130, 130, 130, 1)",
      "hover": "rgba(202, 202, 202, 1)",
      "hoverText1": "rgba(228, 228, 228, 1)",
      "info": {
        "default": "rgba(114, 181, 245, 1)",
        "hover": "rgba(166, 205, 245, 1)",
        "press": "rgba(207, 230, 253, 1)",
      },
      "negative": {
        "default": "rgba(252, 147, 134, 1)",
        "hover": "rgba(249, 186, 177, 1)",
        "press": "rgba(254, 219, 214, 1)",
      },
      "notice": {
        "default": "rgba(222, 167, 29, 1)",
        "hover": "rgba(238, 195, 92, 1)",
        "press": "rgba(252, 225, 167, 1)",
      },
      "onDiscovery": {
        "default": "rgba(228, 228, 228, 1)",
        "hover": "rgba(228, 228, 228, 1)",
        "press": "rgba(228, 228, 228, 1)",
      },
      "onHud": {
        "default": "rgba(31, 31, 31, 1)",
        "hover": "rgba(31, 31, 31, 1)",
        "press": "rgba(31, 31, 31, 1)",
      },
      "onNegative": {
        "default": "rgba(228, 228, 228, 1)",
        "hover": "rgba(228, 228, 228, 1)",
        "press": "rgba(228, 228, 228, 1)",
      },
      "onNotice": {
        "default": "rgba(41, 41, 41, 1)",
        "hover": "rgba(41, 41, 41, 1)",
        "press": "rgba(41, 41, 41, 1)",
      },
      "onOnImg": {
        "default": "rgba(228, 228, 228, 1)",
        "hover": "rgba(228, 228, 228, 1)",
        "press": "rgba(228, 228, 228, 1)",
      },
      "onPositive": {
        "default": "rgba(228, 228, 228, 1)",
        "hover": "rgba(228, 228, 228, 1)",
        "press": "rgba(228, 228, 228, 1)",
      },
      "onPrimary": {
        "default": "rgba(228, 228, 228, 1)",
        "hover": "rgba(228, 228, 228, 1)",
        "press": "rgba(228, 228, 228, 1)",
      },
      "placeholder": {
        "default": "rgba(112, 112, 112, 1)",
        "hover": "rgba(112, 112, 112, 1)",
        "press": "rgba(112, 112, 112, 1)",
      },
      "positive": {
        "default": "rgba(120, 194, 113, 1)",
        "hover": "rgba(161, 215, 155, 1)",
        "press": "rgba(191, 241, 186, 1)",
      },
      "press": "rgba(188, 188, 188, 1)",
      "pressText1": "rgba(228, 228, 228, 1)",
      "secondary": {
        "default": "rgba(175, 175, 175, 1)",
        "hover": "rgba(188, 188, 188, 1)",
        "press": "rgba(202, 202, 202, 1)",
      },
      "tertiary": {
        "default": "rgba(130, 130, 130, 1)",
        "hover": "rgba(175, 175, 175, 1)",
        "press": "rgba(188, 188, 188, 1)",
      },
      "visited": {
        "default": "rgba(191, 160, 246, 1)",
        "hover": "rgba(210, 192, 245, 1)",
        "press": "rgba(233, 223, 255, 1)",
      },
    },
  },
  "paragraphWidth": {
    "l": "672px",
    "lCompact": "588px",
    "lCozy": "924px",
    "m": "448px",
    "mCompact": "392px",
    "mCozy": "616px",
    "s": "320px",
    "sCompact": "280px",
    "sCozy": "588px",
  },
  "radius": {
    "0": "0px",
    "l": "12px",
    "m": "8px",
    "oval": "999999px",
    "s": "4px",
    "xl": "16px",
    "xs": "2px",
    "xxl": "24px",
  },
  "space": {
    "component": {
      "0": "0px",
      "10": "4px",
      "20": "8px",
      "25": "12px",
      "30": "16px",
      "40": "24px",
      "50": "40px",
    },
    "layout": {
      "0": "0px",
      "10": "4px",
      "100": "440px",
      "20": "8px",
      "25": "12px",
      "30": "16px",
      "40": "24px",
      "50": "40px",
      "60": "64px",
      "70": "104px",
      "80": "168px",
      "90": "272px",
    },
    "padding": {
      "paddingCard": "24px",
    },
    "target": {
      "l": "48px",
      "m": "40px",
      "s": "32px",
      "xs": "24px",
    },
  },
  "text": {
    "fontSize": {
      "body": "16px",
      "caption": {
        "m": "14px",
        "s": "12px",
      },
      "heading": {
        "l": "28px",
        "m": "25px",
        "s": "22px",
        "xl": "32px",
        "xs": "20px",
        "xxl": "36px",
        "xxs": "18px",
        "xxxl": "40px",
        "xxxs": "14px",
      },
      "paragraph": "16px",
    },
    "fontWeight": {
      "bold": "700",
      "regular": "400",
    },
    "lineHeight": {
      "body": "24px",
      "caption": {
        "m": "20px",
        "s": "18px",
      },
      "heading": {
        "l": "36px",
        "m": "32px",
        "s": "28px",
        "xl": "40px",
        "xs": "28px",
        "xxl": "44px",
        "xxs": "24px",
        "xxxl": "52px",
        "xxxs": "20px",
      },
      "paragraph": "28px",
    },
  },
}
`;

exports[`changeCaseKeys snapshot test: light theme > camelcaseKeys snapshot test 1`] = `
{
  "borderWidth": {
    "focus": {
      "1": "1px",
      "2": "2px",
    },
    "l": "2px",
    "m": "1px",
  },
  "color": {
    "background": {
      "default": "rgba(255, 255, 255, 1)",
      "overlay": "rgba(0, 0, 0, 0.325)",
      "secondary": "rgba(243, 243, 243, 1)",
      "tertiary": "rgba(232, 232, 232, 1)",
    },
    "border": {
      "default": "rgba(0, 0, 0, 0.42)",
      "defaultText3": "rgba(0, 0, 0, 0.42)",
      "disable": "rgba(0, 0, 0, 0.09)",
      "focus": {
        "1": "rgba(31, 117, 188, 1)",
        "2": "rgba(188, 222, 252, 1)",
        "legacy": "rgba(0, 150, 250, 0.32)",
      },
      "hover": "rgba(0, 0, 0, 0.555)",
      "hoverText3": "rgba(0, 0, 0, 0.555)",
      "hud": "rgba(255, 255, 255, 1)",
      "negative": "rgba(253, 206, 199, 1)",
      "press": "rgba(0, 0, 0, 0.683)",
      "pressText3": "rgba(0, 0, 0, 0.683)",
      "secondary": "rgba(0, 0, 0, 0.09)",
      "selected": "rgba(0, 150, 250, 1)",
    },
    "container": {
      "default": "rgba(255, 255, 255, 1)",
      "defaultA": "rgba(0, 0, 0, 0)",
      "disable": "rgba(232, 232, 232, 1)",
      "discovery": {
        "default": "rgba(253, 91, 78, 1)",
        "hover": "rgba(206, 54, 46, 1)",
        "press": "rgba(147, 33, 28, 1)",
      },
      "hover": "rgba(243, 243, 243, 1)",
      "hoverA": "rgba(0, 0, 0, 0.047)",
      "hud": {
        "default": "rgba(56, 56, 56, 1)",
        "hover": "rgba(81, 81, 81, 1)",
        "press": "rgba(113, 113, 113, 1)",
      },
      "negative": {
        "default": "rgba(253, 91, 78, 1)",
        "hover": "rgba(206, 54, 46, 1)",
        "press": "rgba(147, 33, 28, 1)",
      },
      "neutral": {
        "default": "rgba(148, 148, 148, 1)",
        "hover": "rgba(113, 113, 113, 1)",
        "press": "rgba(81, 81, 81, 1)",
      },
      "notice": {
        "default": "rgba(254, 214, 61, 1)",
        "hover": "rgba(245, 183, 17, 1)",
        "press": "rgba(231, 157, 20, 1)",
      },
      "onImg": {
        "default": "rgba(0, 0, 0, 0.325)",
        "hover": "rgba(0, 0, 0, 0.42)",
        "press": "rgba(0, 0, 0, 0.555)",
      },
      "positive": {
        "default": "rgba(37, 170, 28, 1)",
        "hover": "rgba(17, 131, 8, 1)",
        "press": "rgba(4, 93, 0, 1)",
      },
      "press": "rgba(232, 232, 232, 1)",
      "pressA": "rgba(0, 0, 0, 0.09)",
      "primary": {
        "default": "rgba(0, 150, 250, 1)",
        "hover": "rgba(31, 117, 188, 1)",
        "press": "rgba(24, 81, 130, 1)",
      },
      "secondary": {
        "default": "rgba(243, 243, 243, 1)",
        "defaultA": "rgba(0, 0, 0, 0.047)",
        "hover": "rgba(232, 232, 232, 1)",
        "hoverA": "rgba(0, 0, 0, 0.09)",
        "press": "rgba(217, 217, 217, 1)",
        "pressA": "rgba(0, 0, 0, 0.15)",
      },
      "skeleton": "rgba(0, 0, 0, 0.047)",
      "subtle": "rgba(31, 31, 31, 0.02)",
      "tertiary": {
        "default": "rgba(232, 232, 232, 1)",
        "defaultA": "rgba(0, 0, 0, 0.09)",
        "hover": "rgba(217, 217, 217, 1)",
        "hoverA": "rgba(0, 0, 0, 0.15)",
        "press": "rgba(194, 194, 194, 1)",
        "pressA": "rgba(0, 0, 0, 0.24)",
      },
    },
    "icon": {
      "default": "rgba(31, 31, 31, 1)",
      "disable": "rgba(194, 194, 194, 1)",
      "hover": "rgba(56, 56, 56, 1)",
      "negative": {
        "default": "rgba(206, 54, 46, 1)",
        "hover": "rgba(147, 33, 28, 1)",
        "press": "rgba(103, 22, 17, 1)",
      },
      "notice": {
        "default": "rgba(161, 99, 9, 1)",
        "hover": "rgba(110, 72, 5, 1)",
        "press": "rgba(74, 51, 7, 1)",
      },
      "onNegative": {
        "default": "rgba(255, 255, 255, 1)",
        "hover": "rgba(255, 255, 255, 1)",
        "press": "rgba(255, 255, 255, 1)",
      },
      "onNeutral": {
        "default": "rgba(255, 255, 255, 1)",
        "hover": "rgba(243, 243, 243, 1)",
        "press": "rgba(232, 232, 232, 1)",
      },
      "onNotice": {
        "default": "rgba(31, 31, 31, 1)",
        "hover": "rgba(31, 31, 31, 1)",
        "press": "rgba(31, 31, 31, 1)",
      },
      "onOnImg": {
        "default": "rgba(255, 255, 255, 1)",
        "hover": "rgba(255, 255, 255, 1)",
        "press": "rgba(255, 255, 255, 1)",
      },
      "onPositive": {
        "default": "rgba(255, 255, 255, 1)",
        "hover": "rgba(255, 255, 255, 1)",
        "press": "rgba(255, 255, 255, 1)",
      },
      "onPrimary": {
        "default": "rgba(255, 255, 255, 1)",
        "hover": "rgba(255, 255, 255, 1)",
        "press": "rgba(255, 255, 255, 1)",
      },
      "positive": {
        "default": "rgba(17, 131, 8, 1)",
        "hover": "rgba(4, 93, 0, 1)",
        "press": "rgba(4, 93, 0, 1)",
      },
      "press": "rgba(81, 81, 81, 1)",
      "secondary": {
        "default": "rgba(81, 81, 81, 1)",
        "hover": "rgba(56, 56, 56, 1)",
        "press": "rgba(31, 31, 31, 1)",
      },
      "tertiary": {
        "default": "rgba(113, 113, 113, 1)",
        "hover": "rgba(81, 81, 81, 1)",
        "press": "rgba(56, 56, 56, 1)",
      },
    },
    "text": {
      "default": "rgba(31, 31, 31, 1)",
      "defaultText1": "rgba(31, 31, 31, 1)",
      "disable": "rgba(194, 194, 194, 1)",
      "hover": "rgba(56, 56, 56, 1)",
      "hoverText1": "rgba(31, 31, 31, 1)",
      "info": {
        "default": "rgba(31, 117, 188, 1)",
        "hover": "rgba(24, 81, 130, 1)",
        "press": "rgba(19, 58, 93, 1)",
      },
      "negative": {
        "default": "rgba(206, 54, 46, 1)",
        "hover": "rgba(147, 33, 28, 1)",
        "press": "rgba(103, 22, 17, 1)",
      },
      "notice": {
        "default": "rgba(161, 99, 9, 1)",
        "hover": "rgba(110, 72, 5, 1)",
        "press": "rgba(74, 51, 7, 1)",
      },
      "onDiscovery": {
        "default": "rgba(255, 255, 255, 1)",
        "hover": "rgba(255, 255, 255, 1)",
        "press": "rgba(255, 255, 255, 1)",
      },
      "onHud": {
        "default": "rgba(228, 228, 228, 1)",
        "hover": "rgba(228, 228, 228, 1)",
        "press": "rgba(228, 228, 228, 1)",
      },
      "onNegative": {
        "default": "rgba(255, 255, 255, 1)",
        "hover": "rgba(255, 255, 255, 1)",
        "press": "rgba(255, 255, 255, 1)",
      },
      "onNotice": {
        "default": "rgba(31, 31, 31, 1)",
        "hover": "rgba(31, 31, 31, 1)",
        "press": "rgba(31, 31, 31, 1)",
      },
      "onOnImg": {
        "default": "rgba(255, 255, 255, 1)",
        "hover": "rgba(255, 255, 255, 1)",
        "press": "rgba(255, 255, 255, 1)",
      },
      "onPositive": {
        "default": "rgba(255, 255, 255, 1)",
        "hover": "rgba(255, 255, 255, 1)",
        "press": "rgba(255, 255, 255, 1)",
      },
      "onPrimary": {
        "default": "rgba(255, 255, 255, 1)",
        "hover": "rgba(255, 255, 255, 1)",
        "press": "rgba(255, 255, 255, 1)",
      },
      "placeholder": {
        "default": "rgba(148, 148, 148, 1)",
        "hover": "rgba(148, 148, 148, 1)",
        "press": "rgba(148, 148, 148, 1)",
      },
      "positive": {
        "default": "rgba(17, 131, 8, 1)",
        "hover": "rgba(4, 93, 0, 1)",
        "press": "rgba(7, 64, 4, 1)",
      },
      "press": "rgba(81, 81, 81, 1)",
      "pressText1": "rgba(31, 31, 31, 1)",
      "secondary": {
        "default": "rgba(81, 81, 81, 1)",
        "hover": "rgba(56, 56, 56, 1)",
        "press": "rgba(31, 31, 31, 1)",
      },
      "tertiary": {
        "default": "rgba(113, 113, 113, 1)",
        "hover": "rgba(81, 81, 81, 1)",
        "press": "rgba(56, 56, 56, 1)",
      },
      "visited": {
        "default": "rgba(103, 39, 171, 1)",
        "hover": "rgba(70, 32, 115, 1)",
        "press": "rgba(40, 16, 70, 1)",
      },
    },
  },
  "paragraphWidth": {
    "l": "672px",
    "lCompact": "588px",
    "lCozy": "924px",
    "m": "448px",
    "mCompact": "392px",
    "mCozy": "616px",
    "s": "320px",
    "sCompact": "280px",
    "sCozy": "588px",
  },
  "radius": {
    "0": "0px",
    "l": "12px",
    "m": "8px",
    "oval": "999999px",
    "s": "4px",
    "xl": "16px",
    "xs": "2px",
    "xxl": "24px",
  },
  "space": {
    "component": {
      "0": "0px",
      "10": "4px",
      "20": "8px",
      "25": "12px",
      "30": "16px",
      "40": "24px",
      "50": "40px",
    },
    "layout": {
      "0": "0px",
      "10": "4px",
      "100": "440px",
      "20": "8px",
      "25": "12px",
      "30": "16px",
      "40": "24px",
      "50": "40px",
      "60": "64px",
      "70": "104px",
      "80": "168px",
      "90": "272px",
    },
    "padding": {
      "paddingCard": "24px",
    },
    "target": {
      "l": "48px",
      "m": "40px",
      "s": "32px",
      "xs": "24px",
    },
  },
  "text": {
    "fontSize": {
      "body": "16px",
      "caption": {
        "m": "14px",
        "s": "12px",
      },
      "heading": {
        "l": "28px",
        "m": "25px",
        "s": "22px",
        "xl": "32px",
        "xs": "20px",
        "xxl": "36px",
        "xxs": "18px",
        "xxxl": "40px",
        "xxxs": "14px",
      },
      "paragraph": "16px",
    },
    "fontWeight": {
      "bold": "700",
      "regular": "400",
    },
    "lineHeight": {
      "body": "24px",
      "caption": {
        "m": "20px",
        "s": "18px",
      },
      "heading": {
        "l": "36px",
        "m": "32px",
        "s": "28px",
        "xl": "40px",
        "xs": "28px",
        "xxl": "44px",
        "xxs": "24px",
        "xxxl": "52px",
        "xxxs": "20px",
      },
      "paragraph": "28px",
    },
  },
}
`;
